--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Mediafire - Paczka VoiceMC</title>
+	<title>Paczka</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -18,18 +18,11 @@
 	</div>
 	<center class="ip-address">
 		<h1 class="glow">Zbieramy wycieki</h1> 
-		<hr class="hr1">
-		<hr class="hr2">
 		<h3 class="heading">IP wyciekly z serwera</h3>
 		<p id="gfg"></p>
+		<h3 class="heading">Dziekujemy za twoja lokalizacje</h3>
+		<p id="demo"></p>
 	</center>
-	<div class="date-time">
-		<center>
-			<h3 class="heading">Dziekujemy za twoja lokalizacje</h3>
-			
-			<p id="demo"></p>
-		</center>
-	</div>
 
 	<div class="footer">
 			<p>IP zostalo wyslane do maxeqx <i class="fa fa-heart"></i></p>
